# DominikOcsofszki.github.io

./: 404.html  README.md  index.html  sitemap.xml
OLD/: index.html  pyproject.toml
OLD/_site/git_publish/git_publish/git_publish/: index.html  pyproject.toml
OLD/_site/git_publish/git_publish/git_publish/blog/2023/audios/: index.html
OLD/_site/git_publish/git_publish/git_publish/blog/page/5/: index.html
OLD/_site/git_publish/git_publish/git_publish/blog/tag/blockquotes/: index.html
OLD/_site/git_publish/git_publish/git_publish/git_publish/: feed.xml
OLD/_site/git_publish/git_publish/git_publish/git_publish/blog/2015/images/: index.html
OLD/_site/git_publish/git_publish/git_publish/git_publish/blog/2021/distill/: index.html
OLD/_site/git_publish/git_publish/git_publish/git_publish/blog/2022/redirect/: index.html
OLD/_site/git_publish/git_publish/git_publish/git_publish/blog/2023/post-bibliography/: index.html
OLD/_site/git_publish/git_publish/git_publish/git_publish/blog/2023/tikzjax/: index.html
OLD/_site/git_publish/git_publish/git_publish/git_publish/git_publish/: feed.xml
OLD/_site/git_publish/git_publish/git_publish/git_publish/news/announcement_2024_11_25/: index.html
OLD/_site/git_publish/git_publish/git_publish/git_publish/projects/: index.html
OLD/_site/git_publish/git_publish/git_publish/git_publish/projects/5_project/: index.html
OLD/_site/git_publish/git_publish/git_publish/git_publish/projects/9_project/: index.html
OLD/_site/git_publish/git_publish/git_publish/projects/6_project/: index.html
_site/: 404.html  feed.xml  (+4 more)
(+546 files in other folders)
