[project]
name = "al-folio"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Dominik Ocsofszki", email = "dominikocsofszki@gmail.com"},
]
dependencies = [
    "nbconvert",
    "jupyter>=1.1.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
